# SkySeg

./: .gitattributes  .gitignore  README.md  _quarto.yml  report.html  report.ipynb  saveCondaEnv.sh
00_Dataset/: ADE20K_dataParsingTest.ipynb  DownloadCoco.sh  README.md  createBinaryMaskImagesFromCoco.py
01_CV/: CocoSkySegmentation_tests.ipynb  report.ipynb
01_CV/Graveyard/: PytorchDataset.ipynb
01_DeepLearning/: TrainUnet.ipynb  environment.yml  environmentWithVersion.yml  report.ipynb  saveCondaEnv.sh
01_DeepLearning/Graveyard/: PytorchDataset.ipynb
01_DeepLearning/models/: modelStep1_resnet18_ADE20k.fastai.pth  modelStep2_no_opt_resnet34_ADE20k.fastai.pth
02_AutoGrabCut_Cpp/: AutoGrabCut.cpp  AutoGrabCut.hpp  BackProjection.cpp  BackProjection.hpp  CMakeLists.txt  README.md  main.cpp  runOnCoco.sh  runOnTestImages.sh  utils.cpp  utils.hpp
AutoGrabCut_Cpp/: CMakeLists.txt  README.md  main.cpp  utils.cpp
docs/: index.html  report.html  search.json
docs/01_DeepLearning/: TrainUnet.ipynb
